--- a/src/components/ViewComment/style.module.css
+++ b/src/components/ViewComment/style.module.css
@@ -1,9 +1,9 @@
 .comment {
   padding: var(--size-2);
-  max-inline-size: fit-content;
   background-color: var(--surface-container-high);
   box-shadow: inset 0 0 5px var(--scrim);
   border-radius: var(--size-2);
+  word-break: break-word;
 }
 
 .comment > header {
